{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 41,
  "lineage": "e8cc108f-838a-5aaa-5962-fcdbadd4c5db",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:955955606677:security-group/sg-06254423ca2e24b61",
            "description": "Allow SSH and Prometheus ports",
            "egress": [],
            "id": "sg-06254423ca2e24b61",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "955955606677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e0764c086c927113"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:955955606677:vpc/vpc-0e0764c086c927113",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08dcb66dc04b2773a",
            "default_route_table_id": "rtb-005717dd5a4ed64c3",
            "default_security_group_id": "sg-0881fb0d115a13e93",
            "dhcp_options_id": "dopt-02e606505e6ad6ba0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e0764c086c927113",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005717dd5a4ed64c3",
            "owner_id": "955955606677"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:955955606677:network-acl/acl-061164a9ea1489866",
            "default_network_acl_id": "acl-061164a9ea1489866",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-061164a9ea1489866",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "955955606677",
            "subnet_ids": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f1b1e2e6fd0151f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:955955606677:route-table/rtb-049b2f3b24d020cb4",
            "default_route_table_id": "rtb-049b2f3b24d020cb4",
            "id": "rtb-049b2f3b24d020cb4",
            "owner_id": "955955606677",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f1b1e2e6fd0151f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:955955606677:security-group/sg-02dfdacc21e63935d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02dfdacc21e63935d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "955955606677",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f1b1e2e6fd0151f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb14840ccc72c712",
            "domain": "vpc",
            "id": "eipalloc-0cb14840ccc72c712",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-71-88-225.us-west-2.compute.amazonaws.com",
            "public_ip": "54.71.88.225",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0358accac129347e1",
            "domain": "vpc",
            "id": "eipalloc-0358accac129347e1",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-70-25-59.us-west-2.compute.amazonaws.com",
            "public_ip": "54.70.25.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c915c8c1ee980595",
            "domain": "vpc",
            "id": "eipalloc-0c915c8c1ee980595",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-85-110-69.us-west-2.compute.amazonaws.com",
            "public_ip": "35.85.110.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:955955606677:internet-gateway/igw-09e233457cecb485b",
            "id": "igw-09e233457cecb485b",
            "owner_id": "955955606677",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0f1b1e2e6fd0151f5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09e233457cecb485b",
            "id": "r-rtb-032fbe62638366fff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032fbe62638366fff",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:955955606677:route-table/rtb-0c2dfa9f9f6eb7392",
            "id": "rtb-0c2dfa9f9f6eb7392",
            "owner_id": "955955606677",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1b1e2e6fd0151f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:955955606677:route-table/rtb-0106f24a1de358483",
            "id": "rtb-0106f24a1de358483",
            "owner_id": "955955606677",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1b1e2e6fd0151f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:955955606677:route-table/rtb-031b801c4ac388bad",
            "id": "rtb-031b801c4ac388bad",
            "owner_id": "955955606677",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1b1e2e6fd0151f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:955955606677:route-table/rtb-032fbe62638366fff",
            "id": "rtb-032fbe62638366fff",
            "owner_id": "955955606677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e233457cecb485b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1b1e2e6fd0151f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:955955606677:vpc/vpc-0f1b1e2e6fd0151f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061164a9ea1489866",
            "default_route_table_id": "rtb-049b2f3b24d020cb4",
            "default_security_group_id": "sg-02dfdacc21e63935d",
            "dhcp_options_id": "dopt-02e606505e6ad6ba0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f1b1e2e6fd0151f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-049b2f3b24d020cb4",
            "owner_id": "955955606677",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}